[package]
name = "count_set_bits"
version = "0.0.18"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/randymcmillan/count_set_bits"
repository = "https://github.com/randymcmillan/count_set_bits"
documentation = "https://github.com/randymcmillan/count_set_bits"
keywords = ["bit", "bits"]
description = "count set bits"
authors = ["randymcmillan <randy.lee.mcmillan@gmail.com>"]

[dependencies]

[lib]
name = "count_set_bits"
path = "src/lib.rs"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.14.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = true
